--- a/LeagueMatchInfo/package.json
+++ b/LeagueMatchInfo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "chart.js": "2",
     "sass-migrator": "^1.5.3",
     "vue": "^2.6.11",
     "vue-meta": "^2.3.3",
